[metadata]
name = taskcat
version = 0.9.56
description-file = README.md

[options]
# Options for if this package is being installed from source via pip
packages = taskcat
python_requires = >=3.8.0,<4.0
install_requires =
    pathspec==0.10.3
    reprint
    tabulate>=0.8.2, <1.0
    cfn_lint>=0.78.1,<2.0
    setuptools>=40.4.3
    boto3>=1.9.21,<2.0
    botocore>=1.12.21,<2.0
    urllib3<2
    yattag>=1.10.0,<2.0
    PyYAML~=6.0
    jinja2>=3.1.1,<4.0
    markupsafe>=2.0.1
    requests>=2.31.0
    jsonschema~=3.0
    docker~=7.0
    dulwich~=0.19
    dataclasses-jsonschema>=2.9.0,<2.15.2

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    .tox
max-complexity = 10
max-line-length = 140
select = C,E,F,W,B,B950,T001,T003
# C812, C815, W503 clash with black
ignore = E501,C812,C815,W503,E203

[isort]
line_length = 88
indent = '    '
multi_line_output = 3
default_section = FIRSTPARTY
skip = env
include_trailing_comma = true
combine_as_imports = True
force_grid_wrap = 0
known_first_party = taskcat
known_third_party = boto3,botocore,yaml,requests

[tool:pytest]
# can't do anything about 3rd party modules, so don't spam us
filterwarnings =
    ignore::DeprecationWarning:botocore
    ignore::DeprecationWarning:yaml

testpaths =
    tests

[mypy-setuptools] # don't want to stub external libraries for now
ignore_missing_imports = True

[mypy-boto3] # don't want to stub external libraries for now
ignore_missing_imports = True
